--- a/code/binary_decision_trees.ipynb
+++ b/code/binary_decision_trees.ipynb
@@ -52,6 +52,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f187ea8",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "c7947bea",
@@ -474,6 +480,18 @@
     "plt.xlim([0.0, 1.0])\n",
     "plt.ylim([0.0, 1.0])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "45f3e265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.save('y_true_dt_binary.npy', y_test)\n",
+    "np.save('y_scores_dt_binary.npy', y_test_proba)"
    ]
   },
   {
