--- a/code/multiclass_decision_trees.ipynb
+++ b/code/multiclass_decision_trees.ipynb
@@ -130,6 +130,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
+      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -526,6 +534,18 @@
     "plt.legend(loc='lower right')\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2408d846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.save('y_true_dt_multiclass.npy', y_test)\n",
+    "np.save('y_scores_dt_multiclass.npy', random_search.best_estimator_.predict_proba(X_test))"
    ]
   },
   {
